[gd_scene load_steps=19 format=3 uid="uid://carprirgkvicg"]

[ext_resource type="Script" path="res://Scripts/ghost.gd" id="1_km0fl"]
[ext_resource type="Script" path="res://Scripts/ghost_body.gd" id="2_7ewqv"]
[ext_resource type="Texture2D" uid="uid://di66u4wuue38a" path="res://Assets/sprites/ghost/body_0.png" id="2_pvour"]
[ext_resource type="Texture2D" uid="uid://2s64tyktvjtg" path="res://Assets/sprites/ghost/eyes_0.png" id="4_l248w"]
[ext_resource type="Script" path="res://Scripts/ghost_eyes.gd" id="5_qmg6f"]
[ext_resource type="Texture2D" uid="uid://cqxh0j4c4f7u8" path="res://Assets/sprites/ghost/eyes_3.png" id="6_hq8bf"]
[ext_resource type="Texture2D" uid="uid://b0isgyq66r2pv" path="res://Assets/sprites/ghost/body_1.png" id="6_jphgq"]
[ext_resource type="Texture2D" uid="uid://ccvuphgrlqfcm" path="res://Assets/sprites/ghost/eyes_1.png" id="7_6hycj"]
[ext_resource type="Texture2D" uid="uid://c73ejl62tbdwu" path="res://Assets/sprites/ghost/eyes_2.png" id="8_dhhhe"]
[ext_resource type="Texture2D" uid="uid://dktna2g8xwtsx" path="res://Assets/sprites/ghost/frightened_0.png" id="10_0kvjn"]
[ext_resource type="Texture2D" uid="uid://e3au14xpwrvw" path="res://Assets/sprites/ghost/frightened_1.png" id="11_ni1ab"]
[ext_resource type="Texture2D" uid="uid://bfiy7gaaj1e7k" path="res://Assets/sprites/ghost/frightened_2.png" id="12_k5v0j"]
[ext_resource type="Texture2D" uid="uid://btxtkkumyiufb" path="res://Assets/sprites/ghost/frightened_3.png" id="13_r6ien"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1sak"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_dsor8"]
resource_name = "frightened"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("10_0kvjn"), ExtResource("11_ni1ab")]
}

[sub_resource type="Animation" id="Animation_mb7oa"]
resource_name = "frightened_ending"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("10_0kvjn"), ExtResource("12_k5v0j"), ExtResource("11_ni1ab"), ExtResource("13_r6ien")]
}

[sub_resource type="Animation" id="Animation_p4y68"]
resource_name = "moving"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_pvour"), ExtResource("6_jphgq")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10guv"]
_data = {
"frightened": SubResource("Animation_dsor8"),
"frightened_ending": SubResource("Animation_mb7oa"),
"moving": SubResource("Animation_p4y68")
}

[node name="Ghost" type="Area2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_km0fl")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("10_0kvjn")
script = ExtResource("2_7ewqv")

[node name="Eyes" type="Sprite2D" parent="."]
texture = ExtResource("4_l248w")
script = ExtResource("5_qmg6f")
up = ExtResource("6_hq8bf")
down = ExtResource("4_l248w")
left = ExtResource("7_6hycj")
right = ExtResource("8_dhhhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q1sak")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0

[node name="ScatterTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="ChaseInterval" type="Timer" parent="."]
wait_time = 0.1

[node name="FrightenedTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="AbilityDuration" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AbilityCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_10guv")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="on_position_reached"]
[connection signal="timeout" from="ScatterTimer" to="." method="_on_scatter_timeout"]
[connection signal="timeout" from="ChaseInterval" to="." method="_on_chase_interval_timeout"]
[connection signal="timeout" from="FrightenedTimer" to="." method="_on_frightened_timer_timeout"]
[connection signal="timeout" from="AbilityDuration" to="." method="_on_ability_duration_timeout"]
[connection signal="timeout" from="AbilityCooldown" to="." method="_on_ability_cooldown_timeout"]
